brain/sources/prod-metadata/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>SES-{000000}</displayFormat>
        <label>Session id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>