brain/sources/prod-metadata/objects/Session__c/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>