brain/sources/prod-metadata/objects/Session__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>