brain/sources/prod-metadata/objects/Session__c/fields/Additional_Attendee_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Attendee_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Attendee 1</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Sessions (Additional Attendee 1)</relationshipLabel>
    <relationshipName>Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>