brain/sources/prod-metadata/objects/Session__c/fields/Additional_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Attendee 2</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Sessions (Additional Attendee 2)</relationshipLabel>
    <relationshipName>Sessions2</relationshipName>
    <type>Lookup</type>
</CustomField>