brain/sources/prod-metadata/objects/Session__c/fields/Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Status__c</fullName>
    <label>Analysis status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>