brain/sources/prod-metadata/objects/Session__c/fields/Analyzed_At__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_At__c</fullName>
    <label>Analyzed at</label>
    <type>DateTime</type>
</CustomField>