brain/sources/prod-metadata/objects/Session__c/fields/Approx_time__c.field-meta.xml
<CustomField>
    <fullName>Approx_time__c</fullName>
    <label>Approx  time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>