brain/sources/prod-metadata/objects/Session__c/fields/Attendance_status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_status__c</fullName>
    <label>Attendance status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host Skipped</fullName>
            </value>
            <value>
                <fullName>Attendee Skipped</fullName>
            </value>
            <value>
                <fullName>Attendee 1 Skipped</fullName>
            </value>
            <value>
                <fullName>Attendee 2 Skippped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>