brain/sources/prod-metadata/objects/Session__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Background Check</label>
    <referenceTo>Background_Check__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>