brain/sources/prod-metadata/objects/Session__c/fields/calendar_event_id__c.field-meta.xml
<CustomField>
    <fullName>calendar_event_id__c</fullName>
    <label>calendar event id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>