brain/sources/prod-metadata/objects/Session__c/fields/calendar_link__c.field-meta.xml
<CustomField>
    <fullName>calendar_link__c</fullName>
    <label>calendar link</label>
    <type>Url</type>
</CustomField>