brain/sources/prod-metadata/objects/Session__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sessions (Candidate)</relationshipLabel>
    <relationshipName>Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>