brain/sources/prod-metadata/objects/Session__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Candidate__c)),
      Candidate__r.Email_replica__c ,
    IF(
        NOT(ISBLANK(Lead__c)),
        Lead__r.Email,
        IF(
            NOT(ISBLANK(Onboarding__c)),
             Onboarding__r.Account__r.Email_replica__c  ,
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Email</label>
    <type>Text</type>
</CustomField>