brain/sources/prod-metadata/objects/Session__c/fields/Candidate_Identities__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Identities__c</fullName>
    <label>Candidate identities</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>