brain/sources/prod-metadata/objects/Session__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Candidate__c)),
     Candidate__r.FirstName &amp;&quot; &quot;&amp; Candidate__r.LastName,
    IF(
        NOT(ISBLANK(Lead__c)),
        Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName,
        IF(
            NOT(ISBLANK(Onboarding__c)),
             Onboarding__r.Account__r.FirstName &amp; &quot; &quot; &amp;  Onboarding__r.Account__r.LastName ,
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>