brain/sources/prod-metadata/objects/Session__c/fields/Candidate_On_Camera_Pct__c.field-meta.xml
<CustomField>
    <fullName>Candidate_On_Camera_Pct__c</fullName>
    <label>Candidate on-camera %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>