brain/sources/prod-metadata/objects/Session__c/fields/Candidate_Training_Step__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Training Step</label>
    <referenceTo>CandidateTrainingStep__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>