brain/sources/prod-metadata/objects/Session__c/fields/Coverage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Detail__c</fullName>
    <label>Coverage detail</label>
    <length>120</length>
    <type>Text</type>
</CustomField>