brain/sources/prod-metadata/objects/Session__c/fields/Create_Meeting_Error__c.field-meta.xml
<CustomField>
    <fullName>Create_Meeting_Error__c</fullName>
    <label>Create Meeting Error</label>
    <type>TextArea</type>
</CustomField>