brain/sources/prod-metadata/objects/Session__c/fields/Day_Title__c.field-meta.xml
<CustomField>
    <fullName>Day_Title__c</fullName>
    <label>Day title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>