brain/sources/prod-metadata/objects/Session__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (minutes)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>