brain/sources/prod-metadata/objects/Session__c/fields/End_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>End_Time_IST__c</fullName>
    <label>End Time IST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>