brain/sources/prod-metadata/objects/Session__c/fields/External_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Meeting_ID__c</fullName>
    <label>External Meeting ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>