brain/sources/prod-metadata/objects/Session__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <label>Flag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>person change midsession</fullName>
            </value>
            <value>
                <fullName>fabricated experience</fullName>
            </value>
            <value>
                <fullName>scripted deception</fullName>
            </value>
            <value>
                <fullName>proxy interview coaching</fullName>
            </value>
            <value>
                <fullName>candidate camera off</fullName>
            </value>
            <value>
                <fullName>gaze fixed offscreen</fullName>
            </value>
            <value>
                <fullName>session too short</fullName>
            </value>
            <value>
                <fullName>key section rushed</fullName>
            </value>
            <value>
                <fullName>non english heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>