brain/sources/prod-metadata/objects/Session__c/fields/Host_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Host_Feedback__c</fullName>
    <label>Host Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>