brain/sources/prod-metadata/objects/Session__c/fields/Host_User__c.field-meta.xml
<CustomField>
    <fullName>Host_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host User</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>