brain/sources/prod-metadata/objects/Session__c/fields/Integrity_Score__c.field-meta.xml
<CustomField>
    <fullName>Integrity_Score__c</fullName>
    <label>Session integrity score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>