brain/sources/prod-metadata/objects/Session__c/fields/Integrity_Tier__c.field-meta.xml
<CustomField>
    <fullName>Integrity_Tier__c</fullName>
    <label>Integrity tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>High-risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>