brain/sources/prod-metadata/objects/Session__c/fields/Max_Reading_Likelihood_Pct__c.field-meta.xml
<CustomField>
    <fullName>Max_Reading_Likelihood_Pct__c</fullName>
    <label>Max reading likelihood %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>