brain/sources/prod-metadata/objects/Session__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>