brain/sources/prod-metadata/objects/Session__c/fields/MeetingTopic__c.field-meta.xml
<CustomField>
    <fullName>MeetingTopic__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Candidate_Training__c)) &amp;&amp; NOT(ISBLANK(Candidate_Training_Step__c)),
  BLANKVALUE(Candidate_Training__r.Program__r.Name, &quot;Training&quot;) &amp; &quot; - &quot; &amp; BLANKVALUE(Candidate_Training_Step__r.Name, &quot;Session&quot;),
  Candidate_Name__c &amp; &quot; - &quot; &amp; TEXT(Purpose__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MeetingTopic</label>
    <type>Text</type>
</CustomField>