brain/sources/prod-metadata/objects/Session__c/fields/Non_English_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Non_English_Seconds__c</fullName>
    <label>Non-English seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>