brain/sources/prod-metadata/objects/Session__c/fields/Planned_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Planned_Minutes__c</fullName>
    <label>Planned minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>