brain/sources/prod-metadata/objects/Session__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Version</label>
    <referenceTo>Program_Version__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>