brain/sources/prod-metadata/objects/Session__c/fields/Proof_path__c.field-meta.xml
<CustomField>
    <fullName>Proof_path__c</fullName>
    <label>Proof path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>