brain/sources/prod-metadata/objects/Session__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Internal Interview</fullName>
            </value>
            <value>
                <fullName>Welcome Call — Customer Success</fullName>
            </value>
            <value>
                <fullName>Resume Understanding Session</fullName>
            </value>
            <value>
                <fullName>Initial Call — Marketing</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>