brain/sources/prod-metadata/objects/Session__c/fields/Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Recording_URL__c</fullName>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>