brain/sources/prod-metadata/objects/Session__c/fields/Red_Flags_Summary__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags_Summary__c</fullName>
    <label>Red flags summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>