brain/sources/prod-metadata/objects/Session__c/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <label>Report URL</label>
    <type>Url</type>
</CustomField>