brain/sources/prod-metadata/objects/Session__c/fields/Result_JSON_URL__c.field-meta.xml
<CustomField>
    <fullName>Result_JSON_URL__c</fullName>
    <label>Result JSON URL</label>
    <type>Url</type>
</CustomField>