brain/sources/prod-metadata/objects/Session__c/fields/S3_Prefix__c.field-meta.xml
<CustomField>
    <fullName>S3_Prefix__c</fullName>
    <label>S3 prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>