brain/sources/prod-metadata/objects/Session__c/fields/Same_Person_Throughout__c.field-meta.xml
<CustomField>
    <fullName>Same_Person_Throughout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same person throughout</label>
    <type>Checkbox</type>
</CustomField>