brain/sources/prod-metadata/objects/Session__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>Date Of Session</label>
    <type>Date</type>
</CustomField>