brain/sources/prod-metadata/objects/Session__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <label>Selected Time Zone End Time</label>
    <type>DateTime</type>
</CustomField>