brain/sources/prod-metadata/objects/Session__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <label>Selected Time Zone  Start  Time</label>
    <type>DateTime</type>
</CustomField>