brain/sources/prod-metadata/objects/Session__c/fields/Session_Length_Pct__c.field-meta.xml
<CustomField>
    <fullName>Session_Length_Pct__c</fullName>
    <label>Session length %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>