brain/sources/prod-metadata/objects/Session__c/fields/Session_Summary__c.field-meta.xml
<CustomField>
    <fullName>Session_Summary__c</fullName>
    <label>Session summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>