brain/sources/prod-metadata/objects/Session__c/fields/Session_Window__c.field-meta.xml
<CustomField>
    <fullName>Session_Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session Window this Session belongs to. Keys the createOrAttachSessions lookup.</description>
    <label>Session Window</label>
    <referenceTo>Session_Window__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>