brain/sources/prod-metadata/objects/Session__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>critical</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>