brain/sources/prod-metadata/objects/Session__c/fields/Trainer_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Coverage_Pct__c</fullName>
    <label>Trainer coverage %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>