brain/sources/prod-metadata/objects/Session__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>