brain/sources/prod-metadata/objects/Session__c/fields/Trainer_Talk_Pct__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Talk_Pct__c</fullName>
    <label>Trainer talk %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>