brain/sources/prod-metadata/objects/Session__c/fields/Training_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Training_Day_Number__c</fullName>
    <label>Training day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>