brain/sources/prod-metadata/objects/Session__c/validationRules/Require_Host_Feedback_On_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Host_Feedback_On_Complete</fullName>
    <active>true</active>
    <description>Blocks saving Status = Completed unless Host_Feedback__c is populated. Trainer must record outcome before closing the session.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    ISBLANK(Host_Feedback__c)
)</errorConditionFormula>
    <errorDisplayField>Host_Feedback__c</errorDisplayField>
    <errorMessage>Host Feedback is required before marking the session Completed.</errorMessage>
</ValidationRule>